// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file in nested directory 1`] = `[]`;

exports[`file in root directory 1`] = `
[
  {
    "branches": [],
    "content": {
      "html": "<p>foo</p>
",
      "markdown": "foo",
    },
    "file": {
      "path": "<VARIABLE>/pages/foo.md",
    },
    "route": {
      "isIndex": false,
      "path": "foo",
      "pathExplicit": "foo",
      "segments": [
        "foo",
      ],
      "type": "PageContentRoute",
    },
    "type": "PageBranchContent",
  },
]
`;

exports[`index file 1`] = `
[
  {
    "branches": [],
    "content": {
      "html": "<p>foo</p>
",
      "markdown": "foo",
    },
    "file": {
      "path": "<VARIABLE>/pages/index.md",
    },
    "route": {
      "isIndex": true,
      "path": "/",
      "pathExplicit": "index",
      "segments": [],
      "type": "PageContentRoute",
    },
    "type": "PageBranchContent",
  },
]
`;

exports[`index file nested 1`] = `
[
  {
    "branches": [],
    "content": {
      "html": "<p>foo</p>
",
      "markdown": "foo",
    },
    "file": {
      "path": "<VARIABLE>/pages/about/index.md",
    },
    "route": {
      "isIndex": true,
      "path": "about",
      "pathExplicit": "about/index",
      "segments": [
        "about",
      ],
      "type": "PageContentRoute",
    },
    "type": "PageBranchContent",
  },
]
`;

exports[`linter > conflicting index and exact are fixed by linter 1`] = `[]`;

exports[`multiple files 1`] = `
[
  {
    "branches": [],
    "content": {
      "html": "<p>bar</p>
",
      "markdown": "bar",
    },
    "file": {
      "path": "<VARIABLE>/pages/bar.md",
    },
    "route": {
      "isIndex": false,
      "path": "bar",
      "pathExplicit": "bar",
      "segments": [
        "bar",
      ],
      "type": "PageContentRoute",
    },
    "type": "PageBranchContent",
  },
  {
    "branches": [],
    "content": {
      "html": "<p>foo</p>
",
      "markdown": "foo",
    },
    "file": {
      "path": "<VARIABLE>/pages/foo.md",
    },
    "route": {
      "isIndex": false,
      "path": "foo",
      "pathExplicit": "foo",
      "segments": [
        "foo",
      ],
      "type": "PageContentRoute",
    },
    "type": "PageBranchContent",
  },
]
`;
